--- a/src/assets/styles/02-generic/common.scss
+++ b/src/assets/styles/02-generic/common.scss
@@ -2,6 +2,14 @@ html {
   scroll-behavior: smooth;
 }
 
+@media (max-width: 767px) {
+  html,
+  body {
+    overflow-x: hidden;
+    max-width: 100%;
+  }
+}
+
 // using salla.document.onClick(...), become effective when all children are none pointer events.
 .cursor-pointer * {
   pointer-events: none;
