--- a/src/assets/styles/04-components/influencer-pack.scss
+++ b/src/assets/styles/04-components/influencer-pack.scss
@@ -444,7 +444,7 @@
   }
 
   .influencer-pack__reel-strip {
-    position: absolute;
+    position: fixed;
     inset: 0;
     z-index: 8;
     display: block;
